      python-jsonschema, python-six
    - Bumped versioned dependencies for python-fixtures, python-testtools, and testrepository,
      python-stevedore,
    - Added versioned depends for python-cinderclient, python-neutronclient, python-boto,
      python-paramiko, python-amplib, python-eventlet, python-glanceclient, python-oslo.config,
      python-paramiko, 
 

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 13 Sep 2013 10:12:52 -0400

nova (1:2013.2~b3-0ubuntu1) saucy; urgency=low

  * New usptream release. 
  * debian/patches/avoid_requirements_cheetah.patch: Dropped
  * debian/patches/fix-sqlalchemy-0.7.9-usage.patch: Dropped
  * debian/patches/fix-requirements.patch: Refreshed.
  * debian/patches/path-to-the-xenhost.conf-fixup.patch: Refreshed
  * debian/control: Add python-jinja2
  * debian/control: Dropped python-cheetah

 -- Chuck Short <zulcss@ubuntu.com>  Mon, 09 Sep 2013 13:11:11 -0400

nova (1:2013.2~b2-0ubuntu2) saucy; urgency=low

  * debian/control: Fix python-sqlalchemy dependency. 

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 19 Jul 2013 15:03:16 -0400

nova (1:2013.2~b2-0ubuntu1) saucy; urgency=low

  [ Adam Gandelman ]
  * d/patches/requirements_drop_requests_vers_cap.patch: Remove
    upper version limit  on requests dependency, which was capped upstream
    to fix centos-related gating issues.
  * debian/control:
    - Set version requirement python-kombu (>= 2.5.12).
    - Set version requirement python-pyparsing (>= 1.5.6).
    - Add websockify to nova-spiceproxy Depends.
    - Add spice-html5 to nova-spiceproxy Depends (LP: #1197119)
  * Add nova-xvpvncproxy upstart (LP: #1197163)

  [ James Page ]
  * d/control: Update VCS fields for new branch locations. 

  [ Chuck Short ]
  * New upstream release.
  * debian/patches/fix-requirements.patch: Combined several 
    patches into one.
  * debian/control: Replace python-quantumclient with python-neutronclient.
  * debian/patches/fix-sqlalchemy-0.7.9-usage.patch: Temporary patch to address a FTBFS