@@ -14,6 +14,7 @@ nova (1:2013.2~b3-0ubuntu2) saucy; urgency=low
     - Added versioned depends for python-cinderclient, python-neutronclient, python-boto,
       python-paramiko, python-amplib, python-eventlet, python-glanceclient, python-oslo.config,
       python-paramiko, 
+  * debian/patches/fix-requirements.patch: Rediffed
  
 
  -- Chuck Short <zulcss@ubuntu.com>  Fri, 13 Sep 2013 10:12:52 -0400
